---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: ????
  Info:
    - Mention how it is not a cheat with just one module slot
    - Give the augmentor mod a honorable mention
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025. 02. 13
  Info:
    - Chance the default module slots from 3 to 1
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025. 02. 13
  Info:
    - Fix players being able to deconstruct the base in editor mode
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025. 02. 12
  Info:
    - Sort and merge each time the machine runs
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025. 02. 12
  Info:
    - Make energy usage configurable (for now)
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025. 02. 12
  Info:
    - Update readme
    - Fix empty backtick shenanigans
    - Mention the alt scrolling quality change mod
    - Experience tabbed pane hell
    - Add tabs to switch between modules and inventory
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025. 02. 11
  Info:
    - Fix loaders being unable to interact
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025. 02. 09
  Info:
    - Fix crash due to incomplete math.min()
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025. 02. 06
  Info:
    - Mod portal release