@@ -3,7 +3,7 @@
     "title": "Quality condenser",
     "description": "A recycler that returns the items themselves but a quality higher, success depends on quality modules.",
 
-    "version": "1.1.0",
+    "version": "1.1.1",
     "author": "Quezler",
     "factorio_version": "2.0",
 
